--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22.1"
 bytes = "1.7.1"
 http-body-util = "0.1.2"
 hyper = { version = "1.4.1", features = ["full"] }
 hyper-util = { version = "0.1.7", features = ["full"] }
+sha-1 = "0.10.1"
 tokio = { version = "1.39.2", features = ["full"] }
+web-socket = "0.7.0"
