--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -6,18 +6,21 @@ edition = "2021"
 [dependencies]
 axum = "0.7.5"
 axum-extra = { version = "0.9.3", features = ["protobuf"] }
-base64 = "0.22.1"
-sha-1 = "0.10.1"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing-subscriber = "0.3.18"
-web-socket = "0.7.0"
 prost = "0.13"
+bytes = "1.7.1"
+
 # to debug protobuf as json
+# TODO: remove them once the apis are stable
 prost-wkt = "0.6"
 prost-wkt-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.125"
-bytes = "1.7.1"
+
+# websocket
+soketto = "0.8.0"
+tokio-util = { version = "0.7.11", features = ["compat"] }
 
 [build-dependencies]
 prost-build = "0.13"
