api_server: add tests for bucket name extracting

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -16,3 +16,7 @@ tracing = "0.1.40"
 tower-http = { version = "0.5.2", features = ["trace"] }
 console-subscriber = "0.4.0"
 nss_rpc_client = { path = "../nss_rpc_client" }
+tower = "0.5.1"
+
+[dev-dependencies]
+http-body-util = "0.1.2"
