--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.125"
-axum = "0.7.7"
+axum = { version = "0.7.7", default-features = false, features = ["http1", "query", "tokio"] }
 axum-extra = { version = "0.9.3", features = ["protobuf"] }
 tokio = { version = "1.39.2", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
