--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -18,6 +18,7 @@ console-subscriber = "0.4.0"
 nss_rpc_client = { path = "nss_rpc_client" }
 tower = "0.5.1"
 strum = { version = "0.26.3", features = ["derive"] }
+quick-xml = { version = "0.36.2", features = ["serialize"] }
 
 [dev-dependencies]
 http-body-util = "0.1.2"
