xtask: add parameters to uuid gen tool
λ  playground git:(main) ✗ cargo xtask tool gen_uuids --help
xtask-tool-gen_uuids 0.1.0

USAGE:
    xtask tool gen_uuids [OPTIONS]

FLAGS:
    -h, --help
            Prints help information

    -V, --version
            Prints version information

OPTIONS:
    -f <file>
            File output [default: uuids.data]

    -n <num>
            Number of uuids [default: 1000000]

e.g:
λ  playground git:(main) ✗ cargo xtask tool gen_uuids -n 10000000
[INFO ] Generating 10000000 uuids into file uuids.data
[INFO ] File uuids.data is ready

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 cmd_lib = "1.9.5"
+num_cpus = "1.16.0"
+rayon = "1.10.0"
 structopt = "0.3.26"
 uuid = { version = "1.11.0", features = ["v7"] }
