--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -21,4 +21,4 @@ strum = { version = "0.26.3", features = ["derive"] }
 quick-xml = { version = "0.36.2", features = ["serialize"] }
 http-body-util = "0.1.2"
 uuid = { version = "1.11.0", features = ["v7"] }
-rkyv = { version = "0.8.8", features = ["uuid-1"] }
+rkyv = { version = "0.8.8", features = ["uuid-1", "unaligned"] }
