xtask: add options to restart one specific service
λ  playground git:(main) ✗ cargo xtask service restart api_server
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
     Running `target/debug/xtask service restart api_server`
[INFO ] Building bss and nss server ...
[INFO ] Building api_server ...
[INFO ]     Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.06s
[INFO ] Killing previous services (if any) ...
[INFO ] Starting api server with log api_server.log ...
[INFO ] Waiting 5s for server up
[INFO ] api server (pid=98427) started
λ  playground git:(main) ✗ cat api_server.log
2024-11-24T01:23:08.745879Z  INFO api_server: Server started

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -8,4 +8,5 @@ cmd_lib = "1.9.5"
 num_cpus = "1.16.0"
 rayon = "1.10.0"
 structopt = "0.3.26"
+strum = { version = "0.26.3", features = ["derive"] }
 uuid = { version = "1.11.0", features = ["v7"] }
