feat(root_server): add new root_server module
It will become our control plane in the future!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "api_server/benches/rewrk_rpc",
     "api_server/rpc_client/nss",
     "api_server/rpc_client/bss",
+    "root_server",
     "xtask",
 ]
 resolver = "2"
