feat(rss_rpc): add root server rpc client

--- a/api_server/rpc_client/rss/Cargo.toml
+++ b/api_server/rpc_client/rss/Cargo.toml
@@ -1,24 +1,24 @@
 [package]
-name = "rpc_client_bss"
+name = "rpc_client_rss"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.39.2", features = ["full"] }
+prost = "0.13"
 bytes = "1.7.1"
 thiserror = "1.0.63"
 tracing = "0.1.40"
 bytemuck = { version = "1.18.0", features = ["derive"] }
 tokio-util = { version = "0.7.12", features = ["codec"] }
 tokio-stream = "0.1.16"
-uuid = { version = "1.11.0", features = ["v7"] }
-fake = "3.0.1"
+
+[build-dependencies]
+prost-build = "0.13"
 
 [features]
-default = ["bss"]
+default = ["rss"]
 bss = []
 nss = []
 rss = []
-
-[dev-dependencies]
-tracing-test = {version = "0.2.5", features = ["no-env-filter"]}
