--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -32,6 +32,7 @@ futures.workspace = true
 pin-project-lite.workspace = true
 serde_json.workspace = true
 toml.workspace = true
+clap.workspace = true
 
 [dev-dependencies]
 aws-sdk-s3.workspace = true
