--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cmd_lib = "1.9.5"
-env_logger = "0.11.5"
-num_cpus = "1.16.0"
-rayon = "1.10.0"
-rlimit = "0.10.2"
-structopt = "0.3.26"
-clap = { version = "4.5.27", features = ["derive"] }
-strum = { version = "0.26.3", features = ["derive"] }
-uuid = { version = "1.11.0", features = ["v7"] }
+cmd_lib.workspace = true
+env_logger.workspace = true
+num_cpus.workspace = true
+rayon.workspace = true
+rlimit.workspace = true
+clap.workspace = true
+strum.workspace = true
+uuid.workspace = true
