--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 rpc_client_nss.workspace = true
 rpc_client_bss.workspace = true
 rpc_client_rss.workspace = true
+bucket_tables.workspace = true
 
 serde.workspace = true
 axum.workspace = true
