--- a/api_server/rpc_client/rss/Cargo.toml
+++ b/api_server/rpc_client/rss/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bucket_tables.workspace = true
 serde.workspace = true
 tokio.workspace = true
 prost.workspace = true
