--- a/api_server/bucket_tables/Cargo.toml
+++ b/api_server/bucket_tables/Cargo.toml
@@ -8,3 +8,5 @@ tokio.workspace = true
 bytes.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+hex.workspace = true
+rand.workspace = true
