feat(api_server): verify request signature before processing it
As documented in:
https://docs.aws.amazon.com/AmazonS3/latest/API/sig-v4-authenticating-requests.html

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -34,6 +34,9 @@ pin-project-lite.workspace = true
 serde_json.workspace = true
 toml.workspace = true
 clap.workspace = true
+hmac.workspace = true
+sha2.workspace = true
+itertools.workspace = true
 
 [dev-dependencies]
 aws-sdk-s3.workspace = true
