--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,9 @@ etcd-client = "0.14.0"
 serde_json = "1.0.138"
 toml = { version = "0.8", default-features = false, features = ["parse"] }
 clap = { version = "4.5.27", features = ["derive"] }
+hmac = "0.12"
+sha2 = "0.10"
+itertools = "0.13"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
