feat(api_server): add basic chunked-checksum support
Note only basic testings are ok, and we need to work on more to make
put_object and mpu work.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,15 +52,23 @@ serde_json = "1.0.138"
 toml = { version = "0.8", default-features = false, features = ["parse"] }
 clap = { version = "4.5.27", features = ["derive"] }
 hmac = "0.12"
-sha2 = "0.10"
 itertools = "0.13"
 crc32fast = "1.4.2"
+xxhash-rust = {version = "0.8.15", features = ["xxh3"] }
+blake2 = "0.10.6"
+nom = "7.1"
+base64 = "0.22.1"
+crc32c = "0.6.8"
+md-5 = "0.10"
+sha1 = "0.10"
+sha2 = "0.10"
+url = "2.5.4"
+http-body = "1.0.1"
+serde_bytes = "0.11"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
-base64 = "0.22.1"
 cmd_lib = "1.9.5"
-sha1 = "0.10.6"
 tracing-test = {version = "0.2.5", features = ["no-env-filter"]}
 env_logger = "0.11.5"
 num_cpus = "1.16.0"
