--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -36,14 +36,23 @@ serde_json.workspace = true
 toml.workspace = true
 clap.workspace = true
 hmac.workspace = true
-sha2.workspace = true
 itertools.workspace = true
 thiserror.workspace = true
+xxhash-rust.workspace = true
+blake2.workspace = true
+nom.workspace = true
+base64.workspace = true
+crc32c.workspace = true
+crc32fast.workspace = true
+md-5.workspace = true
+sha1.workspace = true
+sha2.workspace = true
+url.workspace = true
+http-body.workspace = true
+serde_bytes.workspace = true
 
 [dev-dependencies]
 aws-sdk-s3.workspace = true
-base64.workspace = true
 cmd_lib.workspace = true
 sha1.workspace = true
-crc32fast.workspace = true
 tempfile.workspace = true
