--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -52,6 +52,7 @@ http-body.workspace = true
 serde_bytes.workspace = true
 percent-encoding.workspace = true
 sync_wrapper.workspace = true
+tokio-stream.workspace = true
 
 [dev-dependencies]
 aws-sdk-s3.workspace = true
