deploy: add fractalbits-bootstrap tool
Note the user-data running logs are in /var/log/cloud-init-output.log:

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "api_server/bucket_tables",
     "root_server",
     "root_server/admin",
+    "cdk/fractalbits-bootstrap",
     "xtask",
 ]
 resolver = "2"
