api_server: update crates
Prepare for rpc clients improvements (conn pool, retry & metrics)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,10 @@ aws-sdk-dynamodb = "1.78.0"
 aws-sdk-ec2 = "1.136.0"
 log = "0.4.27"
 systemd-journal-logger = "2.2.2"
+bb8 = "0.9.0"
+metrics = "0.24"
+metrics-exporter-prometheus = "0.17.2"
+backoff = "0.4"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
