feat: make nss rpc client to use bb8 based connection pool

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -60,7 +60,7 @@ openssl.workspace = true
 bb8.workspace = true
 metrics.workspace = true
 metrics-exporter-prometheus.workspace = true
-backoff.workspace = true
+tokio-retry.workspace = true
 
 [dev-dependencies]
 cmd_lib.workspace = true
