--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ systemd-journal-logger = "2.2.2"
 bb8 = "0.9.0"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.17.2"
-backoff = "0.4"
+tokio-retry = "0.3"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
