--- a/api_server/rpc_client/nss/Cargo.toml
+++ b/api_server/rpc_client/nss/Cargo.toml
@@ -13,6 +13,10 @@ tracing.workspace = true
 bytemuck.workspace = true
 tokio-util.workspace = true
 tokio-stream.workspace = true
+bb8.workspace = true
+metrics.workspace = true
+metrics-exporter-prometheus.workspace = true
+tokio-retry.workspace = true
 
 [build-dependencies]
 prost-build.workspace = true
