--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,9 @@ rustflags = ["--cfg", "tokio_unstable"]
 
 [profile.release]
 debug = true
+
+[target.aarch64-unknown-linux-gnu]
+rustflags = [
+  "-C", "target-cpu=neoverse-v1",
+  "-C", "target-feature=+lse,+rcpc",
+]
