feat(api_server): Switch metrics exporter to StatsD
Replaced the Prometheus metrics exporter with the StatsD exporter in the `api_server`.
This change configures the API server to send metrics to a StatsD agent running on `127.0.0.1:8125`.
To prepare for pushing metrics into cloudwatch, whose agent is based on StatsD protocol.

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -59,7 +59,7 @@ aws-config.workspace = true
 openssl.workspace = true
 bb8.workspace = true
 metrics.workspace = true
-metrics-exporter-prometheus.workspace = true
+metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 moka.workspace = true
 
