--- a/api_server/rpc_client/bss/Cargo.toml
+++ b/api_server/rpc_client/bss/Cargo.toml
@@ -15,7 +15,7 @@ uuid.workspace = true
 fake.workspace = true
 bb8.workspace = true
 metrics.workspace = true
-metrics-exporter-prometheus.workspace = true
+metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 
 [features]
