--- a/api_server/rpc_client/rss/Cargo.toml
+++ b/api_server/rpc_client/rss/Cargo.toml
@@ -16,7 +16,7 @@ tokio-util.workspace = true
 tokio-stream.workspace = true
 bb8.workspace = true
 metrics.workspace = true
-metrics-exporter-prometheus.workspace = true
+metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 
 [build-dependencies]
