--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ log = "0.4.27"
 systemd-journal-logger = "2.2.2"
 bb8 = "0.9.0"
 metrics = "0.24"
-metrics-exporter-prometheus = "0.17.2"
+metrics-exporter-statsd = "0.9.0"
 tokio-retry = "0.3"
 moka = { version = "0.12", features = ["future"] }
 
