--- a/api_server/rpc_client/nss/Cargo.toml
+++ b/api_server/rpc_client/nss/Cargo.toml
@@ -15,7 +15,7 @@ tokio-util.workspace = true
 tokio-stream.workspace = true
 bb8.workspace = true
 metrics.workspace = true
-metrics-exporter-prometheus.workspace = true
+metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 
 [build-dependencies]
