feat(api_server): Add support for Prometheus metrics
This commit (re)-introduces support for Prometheus as a metrics exporter in the `api_server`.

While integrating metrics into cloudwatch (which is using statsd format), we can use the simple
http://127.0.0.1:8085 endpoint for quick performance analysis before the integration is ready.

e.g.
```
λ  playground git:(main) ✗ curl http://localhost:8085 > metrics
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
100 21187  100 21187    0     0  3974k      0 --:--:-- --:--:-- --:--:-- 4138k
λ  playground git:(main) ✗ less metrics
```

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -59,7 +59,8 @@ aws-config.workspace = true
 openssl.workspace = true
 bb8.workspace = true
 metrics.workspace = true
-metrics-exporter-statsd.workspace = true
+metrics-exporter-statsd = { workspace = true, optional = true }
+metrics-exporter-prometheus = { workspace = true, optional = true }
 tokio-retry.workspace = true
 moka.workspace = true
 
@@ -68,3 +69,8 @@ cmd_lib.workspace = true
 sha1.workspace = true
 tempfile.workspace = true
 rstest.workspace = true
+
+[features]
+default = ["metrics_prometheus"]
+metrics_statsd = ["dep:metrics-exporter-statsd"]
+metrics_prometheus = ["dep:metrics-exporter-prometheus"]
