--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ systemd-journal-logger = "2.2.2"
 bb8 = "0.9.0"
 metrics = "0.24"
 metrics-exporter-statsd = "0.9.0"
+metrics-exporter-prometheus = "0.17.2"
 tokio-retry = "0.3"
 moka = { version = "0.12", features = ["future"] }
 
