--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -9,6 +9,7 @@ rpc_client_bss.workspace = true
 rpc_client_rss.workspace = true
 bucket_tables.workspace = true
 kv_client_traits.workspace = true
+slotmap_conn_pool = { path = "./slotmap_conn_pool" }
 
 serde.workspace = true
 axum.workspace = true
