feat(api_server & root_server): Use mimalloc as default allocator for api_server and root_server
Configured `api_server` and `root_server` to use `mimalloc` as the default global memory allocator.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ metrics-exporter-prometheus = "0.17.2"
 tokio-retry = "0.3"
 moka = { version = "0.12", features = ["future"] }
 slotmap = "1.0"
+mimalloc = "0.1.47"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
