--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -64,6 +64,7 @@ metrics-exporter-statsd = { workspace = true, optional = true }
 metrics-exporter-prometheus = { workspace = true, optional = true }
 tokio-retry.workspace = true
 moka.workspace = true
+mimalloc.workspace = true
 
 [dev-dependencies]
 cmd_lib.workspace = true
