feat(deploy): support im4gn.xarge for nss_server to save cost
- The `build.zig` script is updated to accept a `-Dbss_cpu` flag,
  allowing the `bss_server` to be compiled with a specific CPU
  target that can differ from the rest of the Zig binaries.
- The `bss_server` is now compiled for `neoverse_n1` (Graviton2)
  while other binaries target `neoverse_v1` (Graviton3) when
  compiling for ARM.
- The `bss_server` EC2 instance type in the CDK is changed from
  `m7gd.4xlarge` to `im4gn.xlarge` to better match the
  storage-optimized nature of the workload and its new compile target.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,7 +94,7 @@ mimalloc = "0.1.47"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
-cmd_lib = "1.9.6"
+cmd_lib = { git = "https://github.com/rust-shell-script/rust_cmd_lib", branch = "master" }
 tracing-test = {version = "0.2.5", features = ["no-env-filter"]}
 env_logger = "0.11.5"
 num_cpus = "1.16.0"
