feat(rpc_client): Gracefully handle pending requests on connection drop
Previously, if an RPC connection was closed or dropped, any pending
requests in the `requests` map were not properly handled. This could
lead to clients waiting for a response unnecessarily until timeout.

This commit introduces a `drain_pending_requests` function that is
called when a connection is closed, either from the send/receive
tasks or from the `RpcClient`'s `Drop` implementation. This function
clears the pending requests map, which in turn drops the `oneshot`
senders, immediately notifying the waiting callers that the request
has failed.

--- a/api_server/rpc_client/nss/Cargo.toml
+++ b/api_server/rpc_client/nss/Cargo.toml
@@ -18,6 +18,7 @@ metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 slotmap_conn_pool.workspace = true
 parking_lot.workspace = true
+strum.workspace = true
 
 [build-dependencies]
 prost-build.workspace = true
