perf: try to optimize sha2 computation
Enabled "asm-aarch64" feature for sha2, and use arrayvec to reduce
memory allocation.

```
Reqs: 9570349, Errs:0, Objs:9570349, Bytes: 36.51GiB
 -       PUT Average: 15919 Obj/s, 62.2MiB/s; Current 2094 Obj/s, 8.2MiB/s, 2.9 ms/req

Report: PUT (9595971 reqs). Ran Duration: 10m1s, starting 05:06:05 UTC
 * Objects per request: 1. Size: 4096 bytes. Concurrency: 48.
 * Average: 62.06 MiB/s, 15887.51 obj/s (601s)
 * Reqs: Avg: 3.6ms, 50%: 3.2ms, 90%: 5.1ms, 99%: 10.1ms, Fastest: 0.9ms, Slowest: 401.6ms, StdDev: 3.1ms

Throughput, split into 597 x 1s:
 * Fastest: 69.7MiB/s, 17836.39 obj/s (1s, starting 05:06:06 UTC)
 * 50% Median: 64.6MiB/s, 16532.56 obj/s (1s, starting 05:10:04 UTC)
 * Slowest: 8.2MiB/s, 2089.29 obj/s (1s, starting 05:15:58 UTC)
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ base64 = "0.22.1"
 crc32c = "0.6.8"
 md-5 = "0.10"
 sha1 = "0.10"
-sha2 = "0.10"
+sha2 = { version = "0.10", features = ["asm-aarch64"] }
 url = "2.5.4"
 http-body = "1.0.1"
 serde_bytes = "0.11"
@@ -92,6 +92,7 @@ moka = { version = "0.12", features = ["future"] }
 slotmap = "1.0"
 mimalloc = "0.1.47"
 parking_lot = "0.12"
+arrayvec = "0.7"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
