--- a/cdk/fractalbits-bootstrap/Cargo.toml
+++ b/cdk/fractalbits-bootstrap/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log.workspace = true
 env_logger.workspace = true
 cmd_lib.workspace = true
 clap.workspace = true
 strum.workspace = true
 xtask_tools.workspace = true
+chrono.workspace = true
