--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 prost = "0.13"
 bytes = "1.7.1"
 tracing = "0.1.40"
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["trace", "fs"] }
 console-subscriber = "0.4.0"
 tower = "0.5.1"
 strum = { version = "0.26.3", features = ["derive"] }
