feat(api_server): Add API key management endpoints
Introduces new API endpoints for managing API keys, including creation,
listing, and deletion. These endpoints are exposed under the /api_keys
path.

--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -13,7 +13,7 @@ kv_client_traits.workspace = true
 slotmap_conn_pool.workspace = true
 
 serde.workspace = true
-axum.workspace = true
+axum = { workspace = true, features = ["json"] }
 axum-extra.workspace = true
 axum-macros.workspace = true
 tokio.workspace = true
