xtask(build): disable ebs-failover to speed up build
aws ec2 and ssm sdk compiling took too much time, and it is better to
disable it for now since we are not using it in a near future.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "nss_role_agent",
     "root_server",
     "root_server/admin",
-    "root_server/ebs-failover",
+    # "root_server/ebs-failover",
     "rpc_clients/bss",
     "rpc_clients/common",
     "rpc_clients/nss",
@@ -82,7 +82,8 @@ http-range = "0.1.5"
 aws-config = "1.6.3"
 openssl = { version = "0.10.72", features = ["vendored"]}
 aws-sdk-dynamodb = "1.78.0"
-aws-sdk-ec2 = "1.136.0"
+# aws-sdk-ec2 = "1.136.0"
+# aws-sdk-ssm = "1.78.0"
 log = "0.4.27"
 metrics = "0.24"
 metrics-exporter-statsd = "0.9.0"
