perf: replace mimalloc with jemalloc
Before:
```
Reqs: 19267206, Errs:0, Objs:19267206, Bytes: 73.50GiB
 -       PUT Average: 298986 Obj/s, 1167.9MiB/s; Current 142597 Obj/s, 557.0MiB/s, 5.1 ms/req
Report: PUT (19407961 reqs). Ran Duration: 1m1s, starting 02:47:34 UTC
 * Objects per request: 1. Size: 4096 bytes. Concurrency: 1488. Hosts: 15. Warp Instances: 31.
 * Average: 1177.66 MiB/s, 301480.54 obj/s (61s)
 * Reqs: Avg: 4.7ms, 50%: 3.0ms, 90%: 5.2ms, 99%: 42.3ms, Fastest: 0.8ms, Slowest: 1014.5ms, StdDev: 11.4ms
```

After:
```
Reqs: 19840760, Errs:0, Objs:19840760, Bytes: 75.69GiB
 -       PUT Average: 307370 Obj/s, 1200.7MiB/s; Current 304758 Obj/s, 1190.5MiB/s, 5.5 ms/req
Report: PUT (19870511 reqs). Ran Duration: 1m1s, starting 15:01:34 UTC
 * Objects per request: 1. Size: 4096 bytes. Concurrency: 1488. Hosts: 15. Warp Instances: 31.
 * Average: 1203.07 MiB/s, 307986.94 obj/s (61s)
 * Reqs: Avg: 4.6ms, 50%: 2.9ms, 90%: 5.3ms, 99%: 46.9ms, Fastest: 0.9ms, Slowest: 692.4ms, StdDev: 11.3ms
```

Note the high p99 was due to put_blob, which is expected to be better
with S3-EOZ:
```
rpc_duration_nanos{type="nss",name="put_inode",quantile="0"} 377296
rpc_duration_nanos{type="nss",name="put_inode",quantile="0.5"} 1251308.0996233614
rpc_duration_nanos{type="nss",name="put_inode",quantile="0.9"} 1798565.6480496982
rpc_duration_nanos{type="nss",name="put_inode",quantile="0.95"} 2320979.943401346
rpc_duration_nanos{type="nss",name="put_inode",quantile="0.99"} 4252850.601714225
rpc_duration_nanos{type="nss",name="put_inode",quantile="0.999"} 10616288.694709087
rpc_duration_nanos{type="nss",name="put_inode",quantile="1"} 234793267
rpc_duration_nanos_sum{type="nss",name="put_inode"} 1020133734588
rpc_duration_nanos_count{type="nss",name="put_inode"} 667613
rpc_duration_nanos{type="bss",name="put_blob",quantile="0"} 191259
rpc_duration_nanos{type="bss",name="put_blob",quantile="0.5"} 585546.0087861608
rpc_duration_nanos{type="bss",name="put_blob",quantile="0.9"} 3433532.0625

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,7 +91,7 @@ metrics-exporter-prometheus = "0.17.2"
 tokio-retry = "0.3"
 moka = { version = "0.12", features = ["future"] }
 slotmap = "1.0"
-mimalloc = "0.1.47"
+tikv-jemallocator = "0.6"
 parking_lot = "0.12"
 arrayvec = "0.7"
 config = {version = "0.15", features = ["toml"]}
