--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -61,6 +61,7 @@ tokio-stream.workspace = true
 http-range.workspace = true
 aws-sdk-s3.workspace = true
 aws-config.workspace = true
+aws-smithy-http-client.workspace = true
 openssl.workspace = true
 metrics.workspace = true
 metrics-exporter-statsd = { workspace = true, optional = true }
