feat(rpc): optimize RPC connection stability with advanced socket configuration
- Add socket2 dependency for advanced TCP socket configuration
- Configure 16MB buffers for data-intensive RPC operations
- Set aggressive TCP keepalive (5s idle, 2s interval, 2 retries) for ~9s dead connection detection
- Enable TCP_NODELAY on both client and server sides for lower latency
- Add connection timing monitoring with warnings for slow establishment (>1s)

Benefits:
- Fast failure detection (9 seconds vs potentially minutes)
- High throughput with 16MB buffers (within 128MB system limits)
- Consistent socket configuration across client and server
- Optimized for internal always-ready service communication

Tested: All precheckin tests pass without regressions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,7 @@ arrayvec = "0.7"
 governor = "0.6"
 nonzero_ext = "0.3"
 config = {version = "0.15", features = ["toml"]}
+socket2 = "0.5"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
