--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -8,6 +8,7 @@ rpc_client_common.workspace = true
 rpc_client_nss.workspace = true
 rpc_client_bss.workspace = true
 rpc_client_rss.workspace = true
+nss_codec.workspace = true
 bucket_tables.workspace = true
 kv_client_traits.workspace = true
 data_blob_tracking.workspace = true
