--- a/api_server/kv_client_traits/Cargo.toml
+++ b/api_server/kv_client_traits/Cargo.toml
@@ -9,4 +9,5 @@ tracing.workspace = true
 tokio.workspace = true
 bytes.workspace = true
 rpc_client_rss.workspace = true
+rpc_client_common.workspace = true
 async-trait = "0.1.80"
