--- a/common/crates/data_blob_tracking/Cargo.toml
+++ b/common/crates/data_blob_tracking/Cargo.toml
@@ -17,5 +17,9 @@ rpc_client_rss = { workspace = true }
 rpc_client_common = { workspace = true }
 slotmap_conn_pool = { workspace = true }
 
+# Codecs (needed for response types)
+rss_codec = { workspace = true }
+nss_codec = { workspace = true }
+
 # Bucket tables for accessing bucket data structures
 bucket_tables = { path = "../../../api_server/bucket_tables" }
