--- a/common/crates/rpc_clients/client_common/Cargo.toml
+++ b/common/crates/rpc_clients/client_common/Cargo.toml
@@ -1,27 +1,19 @@
 [package]
-name = "rpc_client_bss"
+name = "rpc_client_common"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio.workspace = true
 bytes.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+tokio.workspace = true
 tokio-util.workspace = true
 tokio-stream.workspace = true
-uuid.workspace = true
-fake.workspace = true
 metrics.workspace = true
-metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
 slotmap_conn_pool.workspace = true
 parking_lot.workspace = true
 strum.workspace = true
-rpc_client_common.workspace = true
 socket2.workspace = true
-bss_codec.workspace = true
 rpc_codec_common.workspace = true
-
-[dev-dependencies]
-tracing-test.workspace = true
