--- a/api_server/Cargo.toml
+++ b/api_server/Cargo.toml
@@ -9,7 +9,7 @@ rpc_client_nss.workspace = true
 rpc_client_bss.workspace = true
 rpc_client_rss.workspace = true
 nss_codec.workspace = true
-bucket_tables.workspace = true
+data_types.workspace = true
 data_blob_tracking.workspace = true
 slotmap_conn_pool.workspace = true
 
