refactor: project directories re-org

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ members = [
     "common/crates/data_types",
     "cdk/fractalbits-bootstrap",
     "common/crates/data_blob_tracking",
-    "multi_az/data_blob_resync_server",
-    "multi_az/nss_role_agent",
+    "ha/multi_az/data_blob_resync_server",
+    "ha/nss_role_agent",
     "root_server",
     "root_server/admin",
-    # "root_server/ebs-failover",
+    # "ha/ebs-failover",
     "common/crates/rpc_clients/bss",
     "common/crates/rpc_clients/client_common",
     "common/crates/rpc_clients/nss",
