feat(cdk): add rust based tool to print detailed stack information
Example: cargo run -p describe-stack

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "common/crates/aws_signature",
     "common/crates/data_types",
     "cdk/fractalbits-bootstrap",
+    "cdk/fractalbits-vpc/tools/describe-stack",
     "common/crates/data_blob_tracking",
     "common/crates/volume_group_proxy",
     "ha/multi_az/data_blob_resync_server",
@@ -129,6 +130,7 @@ rlimit = "0.10.2"
 tempfile = "3.18.0"
 rstest = "0.25.0"
 colored = "2"
+comfy-table = "7.1"
 
 # Build dependencies
 prost-build = "0.13"
