refactor(rpc): move volume types from rss_codec to data_types
Move volume types (DataVgInfo, DataVolume, BssNode, QuorumConfig) to data_types

--- a/crates/common/rpc_clients/rss/Cargo.toml
+++ b/crates/common/rpc_clients/rss/Cargo.toml
@@ -23,6 +23,7 @@ rpc_client_common.workspace = true
 socket2.workspace = true
 rss_codec.workspace = true
 rpc_codec_common.workspace = true
+data_types.workspace = true
 
 [dev-dependencies]
 tracing-test.workspace = true
