--- a/crates/common/volume_group_proxy/Cargo.toml
+++ b/crates/common/volume_group_proxy/Cargo.toml
@@ -12,6 +12,7 @@ rpc_client_bss.workspace = true
 rpc_client_common.workspace = true
 rss_codec.workspace = true
 slotmap_conn_pool.workspace = true
+data_types.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 uuid.workspace = true
