refactor(api_server): update more files to use DataBlobGuid from data_types
Complete the migration by updating all remaining RPC clients and
benchmarks to use DataBlobGuid from data_types crate.

--- a/crates/bench_rpc/Cargo.toml
+++ b/crates/bench_rpc/Cargo.toml
@@ -11,6 +11,7 @@ colored = "2"
 futures-util = "0.3"
 rpc_client_nss = { path = "../common/rpc_clients/nss" }
 rpc_client_bss = { path = "../common/rpc_clients/bss" }
+data_types = { path = "../common/data_types"}
 regex = "1.10.6"
 tokio = { version = "1.40.0", features = ["full"] }
 serde_json = "1"
