--- a/crates/common/rpc_clients/bss/Cargo.toml
+++ b/crates/common/rpc_clients/bss/Cargo.toml
@@ -22,6 +22,7 @@ rpc_client_common.workspace = true
 socket2.workspace = true
 bss_codec.workspace = true
 rpc_codec_common.workspace = true
+data_types.workspace = true
 
 [dev-dependencies]
 tracing-test.workspace = true
