feat(xtask): Add publish sub-command
To publish pre-built binaries, to enable local development with the main
repo only.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ data/
 
 # Third party downloaded dependencies
 third_party/dynamodb_local/
-third_party/dynamodb_local_latest.tar.gz
+third_party/*.tar.gz
 
 # Claude Code configuration
 .claude/
