perf(data_vg_proxy): randomize BSS node order for put_blob operations
Shuffle the BSS node indices before creating write futures to
avoid always writing to nodes in the same order. This distributes
load more evenly across BSS nodes and prevents potential hotspots
from deterministic ordering.

--- a/crates/common/volume_group_proxy/Cargo.toml
+++ b/crates/common/volume_group_proxy/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 bytes.workspace = true
 futures.workspace = true
 metrics.workspace = true
+rand.workspace = true
 rkyv.workspace = true
 rpc_client_bss.workspace = true
 rpc_client_common.workspace = true
