--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,6 +126,8 @@ socket2 = { version = "0.5", features = ["all"] }
 reqwest = { version = "0.11", features = ["json"] }
 hostname = "0.3"
 futures-util = "0.3.31"
+anyhow = "1.0.89"
+regex = "1.10.6"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
