--- a/crates/bench_rpc/Cargo.toml
+++ b/crates/bench_rpc/Cargo.toml
@@ -4,18 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.89"
-bytes = "1.7.1"
-clap = "2"
-colored = "2"
-futures-util = "0.3"
-rpc_client_nss = { path = "../common/rpc_clients/nss" }
-rpc_client_bss = { path = "../common/rpc_clients/bss" }
-data_types = { path = "../common/data_types"}
-regex = "1.10.6"
-tokio = { version = "1.40.0", features = ["full"] }
-serde_json = "1"
-pin-project-lite = "0.2"
-futures = "0.3"
-uuid = { version = "1.11.0", features = ["v7"] }
-rlimit = "0.10.2"
+rpc_client_nss.workspace = true
+rpc_client_bss.workspace = true
+data_types.workspace = true
+
+anyhow.workspace = true
+bytes.workspace = true
+colored.workspace = true
+futures-util.workspace = true
+futures.workspace = true
+pin-project-lite.workspace = true
+regex.workspace = true
+rlimit.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
+uuid.workspace = true
+clap.workspace = true
