--- a/crates/common/aws_signature/Cargo.toml
+++ b/crates/common/aws_signature/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2024"
 testutils = []
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
-hmac = "0.12"
-sha2 = "0.10"
-hex = "0.4"
-base64 = "0.22"
+chrono.workspace = true
+hmac.workspace = true
+sha2.workspace = true
+hex.workspace = true
+base64.workspace = true
 
 [dev-dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio.workspace = true
