feat(api_server): scaffold thread-per-core runtime with per-core contexts

--- a/crates/api_server/Cargo.toml
+++ b/crates/api_server/Cargo.toml
@@ -68,6 +68,11 @@ tikv-jemallocator.workspace = true
 arrayvec.workspace = true
 governor.workspace = true
 futures-util.workspace = true
+socket2.workspace = true
+num_cpus.workspace = true
+core_affinity.workspace = true
+io-uring.workspace = true
+parking_lot.workspace = true
 
 [dev-dependencies]
 aws_signature = { workspace = true, features = ["testutils"] }
