--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,6 +128,8 @@ hostname = "0.3"
 futures-util = "0.3.31"
 anyhow = "1.0.89"
 regex = "1.10.6"
+core_affinity = "0.7"
+io-uring = "0.7"
 
 # Dev dependencies
 aws-sdk-s3 = "1.65.0"
